[package]
name = "bevy_knossos"
version = "0.9.0"
authors = [
    "Julia Naomi <jnboeira@outlook.com>",
    "unrenamed <renkonazbka@gmail.com>",
]
description = "Rust library for generating and rendering mazes"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/naomijub/bevy_knossos"
repository = "https://github.com/naomijub/bevy_knossos"
keywords = ["maze", "bevy", "procedural", "algorithm"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pathfinding = ["dep:pathfinding"]
single_end = ["dep:pathfinding"]
default = ["pathfinding"]

[dependencies]
rand = "0.9.1"
image = "0.25"
clap = { version = "4.5.38", features = ["derive"] }
bitflags = "2.9"
bevy = { version = "0.18", default-features = false }
pathfinding = { version = "4.14", optional = true }

[dev-dependencies]
bevy = { version = "0.18", features = ["bevy_remote"] }
assert_cmd = "2.0.16"
assert_fs = "1.1"
criterion = { version = "0.8", features = ["html_reports"] }
bevy-inspector-egui = "0.35"
bevy_ecs_tilemap = "0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = { level = "warn", priority = 5 }
nursery = { level = "warn", priority = 4 }
similar_names = { level = "allow", priority = 11 }
use_self = { level = "allow", priority = 11 }
wildcard_imports = { level = "allow", priority = 11 }
many_single_char_names = { level = "allow", priority = 11 }
missing_const_for_fn = { level = "warn" }
option_if_let_else = { level = "warn" }
or_fun_call = { level = "warn" }

# Bevy Related
float_cmp = { level = "allow", priority = 10 }
cast_sign_loss = { level = "allow", priority = 10 }
cast_possible_truncation = { level = "allow", priority = 10 }
cast_precision_loss = { level = "allow", priority = 10 }
too_many_lines = { level = "allow", priority = 10 }
cognitive_complexity = { level = "allow", priority = 10 }
type_complexity = { level = "allow", priority = 10 }
needless_pass_by_value = { level = "allow", priority = 10 }
needless_pass_by_ref_mut = { level = "allow", priority = 10 }
significant_drop_in_scrutinee = { level = "allow", priority = 10 }
significant_drop_tightening = { level = "allow", priority = 10 }
too_many_arguments = { level = "allow", priority = 10 }

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "formatters"
harness = false

[[example]]
name = "bevy_pathfinding"
features = ["pathfinding"]
required-features = ["pathfinding"]

[[example]]
name = "bevy_multiple_ends"
features = ["pathfinding"]
required-features = ["pathfinding"]