[package]
name = "bevy_knossos"
version = "0.10.0"
authors = [
    "Julia Naomi <jnboeira@outlook.com>",
    "unrenamed <renkonazbka@gmail.com>",
]
description = "Rust library for generating and rendering mazes"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/naomijub/bevy_knossos"
repository = "https://github.com/naomijub/bevy_knossos"
keywords = ["maze", "bevy", "procedural", "algorithm"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pathfinding = ["dep:pathfinding"]
single_end = ["dep:pathfinding"]
default = ["pathfinding"]

[dependencies]
rand = "0.10.0"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
bitflags = "2.9"
bevy = { version = "0.18", default-features = false }
pathfinding = { version = "4.14", optional = true }

[dev-dependencies]
bevy = { version = "0.18", features = ["bevy_remote"] }
assert_cmd = "2.1"
assert_fs = "1.1"
criterion = { version = "0.8", features = ["html_reports"] }
bevy-inspector-egui = "0.36"
bevy_ecs_tilemap = "0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "deny"
nursery = "deny"
all = "deny"


# Bevy Related
similar_names = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
needless_pass_by_ref_mut = { level = "allow", priority = 1 }
significant_drop_in_scrutinee = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "formatters"
harness = false

[[example]]
name = "bevy_pathfinding"
features = ["pathfinding"]
required-features = ["pathfinding"]

[[example]]
name = "bevy_multiple_ends"
features = ["pathfinding"]
required-features = ["pathfinding"]